# image-to-body-math

./: .file-naming-exceptions  .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml
.github/scripts/: pre-analysis.sh
.github/workflows/: build-test.yml  cpp-quality.yml  python.yml
cmake/: image-to-body-mathConfig.cmake.in
include/image-to-body-math/: body_space.hpp  math.hpp  types.hpp
python/: bindings.cpp
src/image_to_body_math/: __init__.py  _core.pyi
test/: body_space_test.cpp  image-to-body-math_test.cpp
tests/python/: bench.py  conftest.py  test_body_space.py  test_fuzz.py  test_math.py
