<?xml version="1.0"?>
<package format="3">
  <name>image-to-body-math</name>
  <version>0.1.0</version>
  <description>Image to body and body to image types and math cpp library</description>
  <maintainer email="pavelguzenfeld@gmail.com">Pavel Guzenfeld</maintainer>
  <license>MIT</license>
  <build_depend>libfmt-dev</build_depend>
  <build_depend>cmake-library</build_depend>
  <depend>linalg3d</depend>
</package>